--- a/src/app/sag/sag.component.html
+++ b/src/app/sag/sag.component.html
@@ -2,8 +2,8 @@
     <mat-card *ngIf="type==='rear'" class="example-card">
         <mat-card-header>
           <!-- <div mat-card-avatar class="example-header-image"></div> -->
-          <mat-card-title>SAG Trasero</mat-card-title>
-          <mat-card-subtitle>Cálculo del SAG Trasero</mat-card-subtitle>
+          <mat-card-title>{{ 'SAG.REAR' | translate }}</mat-card-title>
+          <mat-card-subtitle>{{ 'SAG.CALC_REAR' | translate }}</mat-card-subtitle>
           <span class="example-spacer"></span>
           <button mat-icon-button>
             <mat-icon (click)="openDialogSettingSagRear()"  class="example-icon" aria-hidden="false" aria-label="Settings">settings</mat-icon>
@@ -11,49 +11,49 @@
         </mat-card-header>
         <img  mat-card-image src="./assets/img/rear2.png" alt="SAG">
         <mat-card-content>
-            <mat-card-title>Introduce las medidas</mat-card-title>
+            <mat-card-title>{{ 'SAG.PUT_MEASURE' | translate }}</mat-card-title>
             <form [formGroup]="sagRearForm" class="example-form">
               <table class="example-full-width responsive" cellspacing="0">
                 <tr>
                     <td>
                         <mat-form-field class="example-full-width">
-                            <mat-label>Medida A</mat-label>
+                            <mat-label>{{ 'SAG.MEASURE' | translate }} A</mat-label>
                             <input type="tel" matInput formControlName="raFormControl" [errorStateMatcher]="matcher"
                                     placeholder="Ejm. 600">
                             <span matSuffix>mm</span>
-                            <mat-hint>Medida montada en el banco!</mat-hint>
+                            <mat-hint>{{ 'SAG.MEASURE_BENCH' | translate }}</mat-hint>
                             <mat-error *ngIf="sagRearForm.get('raFormControl').hasError('pattern')" >
-                                Introduce un valor válido
+                                {{ 'ERROR.ERROR_1' | translate }}
                             </mat-error>
                             <mat-error *ngIf="sagRearForm.get('raFormControl').hasError('required')">
-                                Medida A es <strong>requerida</strong>
+                                {{ 'SAG.MEASURE' | translate }} A {{ 'SAG.IS' | translate }} <strong>{{ 'ERROR.REQUIRED' | translate }}</strong>
                             </mat-error>
                         </mat-form-field>
                     </td>
                     <td>
                         <mat-form-field class="example-full-width">
-                            <mat-label>Medida B</mat-label>
+                            <mat-label>{{ 'SAG.MEASURE' | translate }} B</mat-label>
                             <input type="tel" matInput formControlName="rbFormControl" [errorStateMatcher]="matcher"
                                     placeholder="Ejm. 565">
                             <span matSuffix>mm</span>
-                            <mat-hint>Medida en el suelo!</mat-hint>
+                            <mat-hint>{{ 'SAG.MEASURE_GROUND' | translate }}</mat-hint>
                             <mat-error *ngIf="sagRearForm.get('rbFormControl').hasError('pattern')" >
-                                Introduce un valor válido
+                                {{ 'ERROR.ERROR_1' | translate }}
                             </mat-error>
                             <mat-error *ngIf="sagRearForm.get('rbFormControl').hasError('required')">
-                                Medida B es <strong>requerido</strong>
+                                {{ 'SAG.MEASURE' | translate }} B {{ 'SAG.IS' | translate }} <strong>{{ 'ERROR.REQUIRED' | translate }}</strong>
                             </mat-error>
                         </mat-form-field>
                     </td>
                     <td>
                         <mat-form-field class="example-full-width">
-                            <mat-label>Medida C</mat-label>
+                            <mat-label>{{ 'SAG.MEASURE' | translate }} C</mat-label>
                             <input type="tel" matInput formControlName="rcFormControl" [errorStateMatcher]="matcher"
                                     placeholder="Ejm. 500">
                             <span matSuffix>mm</span>
-                            <mat-hint>Medida con el piloto y su equipo!</mat-hint>
+                            <mat-hint>{{ 'SAG.MEASURE_RIDER' | translate }}</mat-hint>
                             <mat-error *ngIf="sagRearForm.get('rcFormControl').hasError('pattern')" >
-                                Introduce un valor válido
+                                {{ 'ERROR.ERROR_1' | translate }}
                             </mat-error>
                         </mat-form-field>
                     </td>
@@ -63,16 +63,16 @@
             </form>
         </mat-card-content>
         <mat-card-actions>
-          <button mat-button mat-raised-button color="primary" (click)="getSagRear()" [disabled]="errorSagERear==null && sagRearForm.invalid" >Calcular</button>
-          <button mat-button (click)="sagRearForm.reset(); dataSourceRear.sagE=''; errorSagERear=null">Borrar</button>
+          <button mat-button mat-raised-button color="primary" (click)="getSagRear()" [disabled]="errorSagERear==null && sagRearForm.invalid" >{{ 'SAG.CALC' | translate }}</button>
+          <button mat-button (click)="sagRearForm.reset(); dataSourceRear.sagE=''; errorSagERear=null">{{ 'SAG.CLEAN' | translate }}</button>
         </mat-card-actions>
       </mat-card>
     <br>
       <mat-card [@flip] *ngIf="(dataSourceRear.sagE!='' || dataSourceRear.sagE=='0') && type==='rear'" class="example-card">
         <mat-card-header>
             <!-- <div mat-card-avatar class="example-header-image"></div> -->
-            <mat-card-title>Resultados SAG Trasero</mat-card-title>
-            <mat-card-subtitle>Valores obtenidos</mat-card-subtitle>
+            <mat-card-title>{{ 'SAG.RESULTS' | translate }} {{ 'SAG.REAR' | translate }}</mat-card-title>
+            <mat-card-subtitle>{{ 'SAG.VALUES' | translate }}</mat-card-subtitle>
           </mat-card-header>
           <mat-card-content>
             <mat-grid-list [cols]="mobileQuery.matches ? 1 : 2" [rowHeight]="mobileQuery.matches ? '1:0.2' : '1:0.3'" >
@@ -80,14 +80,14 @@
                 [style.background] = "dataSourceRear.errorE ? '#FFCDD2':'#DCEDC8'"
                 [style.color]="dataSourceRear.errorE ? 'red': 'green'">
                 <div class="text-inside-grid">
-                    <b>SAG Estático: {{dataSourceRear.sagE}}mm</b><br>{{dataSourceRear.msgE}} 
+                    <b>{{ 'SAG.STATIC' | translate }}: {{dataSourceRear.sagE}}mm</b><br>{{dataSourceRear.msgE | translate}} 
                 </div>
                 </mat-grid-tile>
                 <mat-grid-tile 
                 [style.background] = "dataSourceRear.errorD ? '#FFCDD2':'#DCEDC8'"
                 [style.color]="dataSourceRear.errorD ? 'red': 'green'">
                 <div class="text-inside-grid">
-                   <b>SAG Dinámico: {{dataSourceRear.sagD}}mm</b><br>{{dataSourceRear.msgD}}
+                   <b>{{ 'SAG.DINAMIC' | translate }}: {{dataSourceRear.sagD}}mm</b><br>{{dataSourceRear.msgD | translate}}
                 </div>
                 </mat-grid-tile>
             </mat-grid-list>
@@ -100,8 +100,8 @@
     <mat-card *ngIf="type==='front'" class="example-card">
       <mat-card-header>
         <!-- <div mat-card-avatar class="example-header-image"></div> -->
-        <mat-card-title>SAG Delantero</mat-card-title>
-        <mat-card-subtitle>Cálculo del SAG Delantero</mat-card-subtitle>
+        <mat-card-title>{{ 'SAG.FRONT' | translate }}</mat-card-title>
+        <mat-card-subtitle>{{ 'SAG.CALC_FRONT' | translate }}</mat-card-subtitle>
         <span class="example-spacer"></span>
         <button mat-icon-button>
           <mat-icon (click)="openDialogSettingSagFront()" class="example-icon" aria-hidden="false" aria-label="Settings">settings</mat-icon>
@@ -109,49 +109,49 @@
       </mat-card-header>
       <img mat-card-image src="./assets/img/front2.png" alt="SAG">
       <mat-card-content>
-          <mat-card-title>Introduce las medidas</mat-card-title>
+          <mat-card-title>{{ 'SAG.PUT_MEASURE' | translate }}</mat-card-title>
           <form [formGroup]="sagFrontForm" class="example-form">
             <table class="example-full-width responsive" cellspacing="0">
               <tr>
                   <td>
                       <mat-form-field class="example-full-width">
-                          <mat-label>Medida A</mat-label>
+                          <mat-label>{{ 'SAG.MEASURE' | translate }} A</mat-label>
                           <input type="tel" matInput formControlName="raFormControl" [errorStateMatcher]="matcher"
                                   placeholder="Ejm. 600">
                           <span matSuffix>mm</span>
-                          <mat-hint>Medida montada en el banco!</mat-hint>
+                          <mat-hint>{{ 'SAG.MEASURE_BENCH' | translate }}</mat-hint>
                           <mat-error *ngIf="sagRearForm.get('raFormControl').hasError('pattern')" >
-                              Introduce un valor válido
+                            {{ 'ERROR.ERROR_1' | translate }}
                           </mat-error>
                           <mat-error *ngIf="sagRearForm.get('raFormControl').hasError('required')">
-                              Medida A es <strong>requerida</strong>
+                            {{ 'SAG.MEASURE' | translate }} A {{ 'SAG.IS' | translate }} <strong>{{ 'ERROR.REQUIRED' | translate }}</strong>
                           </mat-error>
                       </mat-form-field>
                   </td>
                   <td>
                       <mat-form-field class="example-full-width">
-                          <mat-label>Medida B</mat-label>
+                          <mat-label>{{ 'SAG.MEASURE' | translate }} B</mat-label>
                           <input type="tel" matInput formControlName="rbFormControl" [errorStateMatcher]="matcher"
                                   placeholder="Ejm. 570">
                           <span matSuffix>mm</span>
-                          <mat-hint>Medida en el suelo!</mat-hint>
+                          <mat-hint>{{ 'SAG.MEASURE_GROUND' | translate }}</mat-hint>
                           <mat-error *ngIf="sagRearForm.get('rbFormControl').hasError('pattern')" >
-                              Introduce un valor válido
+                            {{ 'ERROR.ERROR_1' | translate }}
                           </mat-error>
                           <mat-error *ngIf="sagRearForm.get('rbFormControl').hasError('required')">
-                              Medida B es <strong>requerida</strong>
+                            {{ 'SAG.MEASURE' | translate }} B {{ 'SAG.IS' | translate }} <strong>{{ 'ERROR.REQUIRED' | translate }}</strong>
                           </mat-error>
                       </mat-form-field>
                   </td>
                   <td>
                       <mat-form-field class="example-full-width">
-                          <mat-label>Medida C</mat-label>
+                          <mat-label>{{ 'SAG.MEASURE' | translate }} C</mat-label>
                           <input type="tel" matInput formControlName="rcFormControl" [errorStateMatcher]="matcher"
                                   placeholder="Ejm. 540">
                           <span matSuffix>mm</span>
-                          <mat-hint>Medida con el piloto y su equipo!</mat-hint>
+                          <mat-hint>{{ 'SAG.MEASURE_RIDER' | translate }}</mat-hint>
                           <mat-error *ngIf="sagRearForm.get('rcFormControl').hasError('pattern')" >
-                              Introduce un valor válido
+                            {{ 'ERROR.ERROR_1' | translate }}
                           </mat-error>
                       </mat-form-field>
                   </td>
@@ -161,16 +161,16 @@
           </form>
       </mat-card-content>
       <mat-card-actions>
-        <button mat-button mat-raised-button color="primary" (click)="getSagFront();" [disabled]="errorSagEFront==null && sagFrontForm.invalid" >Calcular</button>
-        <button mat-button (click)="sagFrontForm.reset(); dataSourceFront.sagE=''; errorSagEFront=null">Borrar</button>
+        <button mat-button mat-raised-button color="primary" (click)="getSagFront();" [disabled]="errorSagEFront==null && sagFrontForm.invalid" >{{ 'SAG.CALC' | translate }}</button>
+        <button mat-button (click)="sagFrontForm.reset(); dataSourceFront.sagE=''; errorSagEFront=null">{{ 'SAG.CLEAN' | translate }}</button>
       </mat-card-actions>
     </mat-card>
   <br>
     <mat-card [@flip] *ngIf="(dataSourceFront.sagE!='' || dataSourceFront.sagE=='0') && type==='front'" class="example-card">
       <mat-card-header>
           <!-- <div mat-card-avatar class="example-header-image"></div> -->
-          <mat-card-title>Resultados SAG Delantero</mat-card-title>
-          <mat-card-subtitle>Valores obtenidos</mat-card-subtitle>
+          <mat-card-title>{{ 'SAG.RESULTS' | translate }} {{ 'SAG.FRONT' | translate }}</mat-card-title>
+          <mat-card-subtitle>{{ 'SAG.VALUES' | translate }}</mat-card-subtitle>
         </mat-card-header>
         <mat-card-content>
           <mat-grid-list [cols]="mobileQuery.matches ? 1 : 2" [rowHeight]="mobileQuery.matches ? '1:0.2' : '1:0.3'" >
@@ -178,14 +178,14 @@
               [style.background] = "dataSourceFront.errorE ? '#FFCDD2':'#DCEDC8'"
               [style.color]="dataSourceFront.errorE ? 'red': 'green'">
               <div class="text-inside-grid">
-                  <b>SAG Estático: {{dataSourceFront.sagE}}mm</b><br>{{dataSourceFront.msgE}} 
+                  <b>{{ 'SAG.STATIC' | translate }}: {{dataSourceFront.sagE}}mm</b><br>{{dataSourceFront.msgE | translate}} 
               </div>
               </mat-grid-tile>
               <mat-grid-tile 
               [style.background] = "dataSourceFront.errorD ? '#FFCDD2':'#DCEDC8'"
               [style.color]="dataSourceFront.errorD ? 'red': 'green'">
               <div class="text-inside-grid">
-                  <b>SAG Dinámico: {{dataSourceFront.sagD}}mm</b><br>{{dataSourceFront.msgD}}
+                  <b>{{ 'SAG.DINAMIC' | translate }}: {{dataSourceFront.sagD}}mm</b><br>{{dataSourceFront.msgD | translate}}
               </div>
               </mat-grid-tile>
           </mat-grid-list>
