--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,10 +1,11 @@
 .example-card {
-    max-width: 660px;
+    max-width: 820px;
   /* needed styles below */
   /* display: flex; */
   /* justify-content: space-between; */
     margin-left: auto;
     margin-right: auto;
+    padding: 10px;
   }
 
   
@@ -15,8 +16,8 @@
   
 
   .example-form {
-        /* min-width: 150px;
-        max-width: 520px; */
+    /* min-width: 150px;
+    max-width: 520px; */
     width: 100%;
   }
   
