--- a/src/app/nav/nav.component.css
+++ b/src/app/nav/nav.component.css
@@ -12,6 +12,13 @@
 
 }
 
+.lang{
+  width: 100px; 
+  text-align: center; 
+  margin-right: 5px; 
+  margin-top:19px
+}
+
 .example-icon {
   padding: 0px;
 }
@@ -26,9 +33,9 @@
   z-index: 2;
 }
 
-h1.example-app-name {
-  margin-left: 8px;
-}
+/* h1.example-app-name {
+  margin-top: 16px;
+} */
 
 .example-sidenav-container {
   /* When the sidenav is not fixed, stretch the sidenav container to fill the available space. This
@@ -89,4 +96,8 @@ footer{
   /* height: 80%;
   max-height: 80%;
   overflow: auto; */
+}
+
+.mat-mdc-menu-panel{
+  right: 18px !important;
 }
