--- a/src/app/sag/sag.component.css
+++ b/src/app/sag/sag.component.css
@@ -1,5 +1,5 @@
 .example-card {
-  max-width: 660px;
+  max-width: 820px;
   /* needed styles below */
   /* display: flex; */
   /* justify-content: space-between; */
@@ -30,8 +30,8 @@
   
 
   .example-form {
-        /* min-width: 150px;
-        max-width: 520px; */
+    /* min-width: 150px;
+    max-width: 520px; */
     width: 100%;
   }
   
@@ -46,6 +46,28 @@
 
   td {
     padding-right: 8px;
-    display: inline-block;
+    
   }
+
+  .mat-suffix {
+    color: #ccc;
+    margin-right: 8px;
+  }
+
+  @media screen and (max-width: 600px) {
+    .example-card {
+      max-width: 100%;
+      /* needed styles below */
+      /* display: flex; */
+      /* justify-content: space-between; */
+      margin-left: auto;
+      margin-right: auto;
+      }
+      td{
+        display: inline-flex;
+        width: 100%;
+      }
+  }
+    
+
   
