--- a/src/app/sag/sag.component.html
+++ b/src/app/sag/sag.component.html
@@ -1,17 +1,19 @@
 <div [@animate] fxLayout="row"  fxLayoutGap="22px" class="center"  [style.margin-top]="'22px'">
     <mat-card *ngIf="type==='rear'" class="example-card">
         <mat-card-header>
-          <!-- <div mat-card-avatar class="example-header-image"></div> -->
           <mat-card-title>{{ 'SAG.REAR' | translate }}</mat-card-title>
           <mat-card-subtitle>{{ 'SAG.CALC_REAR' | translate }}</mat-card-subtitle>
           <span class="example-spacer"></span>
-          <button mat-icon-button>
-            <mat-icon (click)="openDialogSettingSagRear()"  class="example-icon" aria-hidden="false" aria-label="Settings">settings</mat-icon>
+          <button mat-icon-button (click)="openDialogSettingSagRear()">
+            <mat-icon  class="example-icon" aria-hidden="false" aria-label="Settings">settings</mat-icon>
           </button>
         </mat-card-header>
-        <img  mat-card-image src="./assets/img/rear2.png" alt="SAG">
+        <br>
+        <img height="70%" width="100%" mat-card-image src="./assets/img/rear2.png" alt="{{ 'SAG.REAR' | translate }}">
+        <br>
         <mat-card-content>
             <mat-card-title>{{ 'SAG.PUT_MEASURE' | translate }}</mat-card-title>
+            <br>
             <form [formGroup]="sagRearForm" class="example-form">
               <table class="example-full-width responsive" cellspacing="0">
                 <tr>
@@ -20,7 +22,7 @@
                             <mat-label>{{ 'SAG.MEASURE' | translate }} A</mat-label>
                             <input type="tel" matInput formControlName="raFormControl" [errorStateMatcher]="matcher"
                                     placeholder="Ejm. 600">
-                            <span matSuffix>mm</span>
+                            <span class="mat-suffix" matSuffix>mm</span>
                             <mat-hint>{{ 'SAG.MEASURE_BENCH' | translate }}</mat-hint>
                             <mat-error *ngIf="sagRearForm.get('raFormControl').hasError('pattern')" >
                                 {{ 'ERROR.ERROR_1' | translate }}
@@ -35,7 +37,7 @@
                             <mat-label>{{ 'SAG.MEASURE' | translate }} B</mat-label>
                             <input type="tel" matInput formControlName="rbFormControl" [errorStateMatcher]="matcher"
                                     placeholder="Ejm. 565">
-                            <span matSuffix>mm</span>
+                            <span class="mat-suffix" matSuffix>mm</span>
                             <mat-hint>{{ 'SAG.MEASURE_GROUND' | translate }}</mat-hint>
                             <mat-error *ngIf="sagRearForm.get('rbFormControl').hasError('pattern')" >
                                 {{ 'ERROR.ERROR_1' | translate }}
@@ -50,30 +52,34 @@
                             <mat-label>{{ 'SAG.MEASURE' | translate }} C</mat-label>
                             <input type="tel" matInput formControlName="rcFormControl" [errorStateMatcher]="matcher"
                                     placeholder="Ejm. 500">
-                            <span matSuffix>mm</span>
+                            <span class="mat-suffix" matSuffix>mm</span>
                             <mat-hint>{{ 'SAG.MEASURE_RIDER' | translate }}</mat-hint>
                             <mat-error *ngIf="sagRearForm.get('rcFormControl').hasError('pattern')" >
                                 {{ 'ERROR.ERROR_1' | translate }}
                             </mat-error>
                         </mat-form-field>
                     </td>
-                   
                 </tr>
                 </table>
             </form>
         </mat-card-content>
+        <br>
         <mat-card-actions>
-          <button mat-button mat-raised-button color="primary" (click)="getSagRear()" [disabled]="errorSagERear==null && sagRearForm.invalid" >{{ 'SAG.CALC' | translate }}</button>
+          <button mat-button mat-raised-button 
+          style="margin-right: 10px;"
+          color="primary" (click)="getSagRear()" [disabled]="errorSagERear==null && sagRearForm.invalid" >
+          {{ 'SAG.CALC' | translate }}
+        </button>
           <button mat-button (click)="sagRearForm.reset(); dataSourceRear.sagE=''; errorSagERear=null">{{ 'SAG.CLEAN' | translate }}</button>
         </mat-card-actions>
       </mat-card>
     <br>
       <mat-card [@flip] *ngIf="(dataSourceRear.sagE!='' || dataSourceRear.sagE=='0') && type==='rear'" class="example-card">
         <mat-card-header>
-            <!-- <div mat-card-avatar class="example-header-image"></div> -->
             <mat-card-title>{{ 'SAG.RESULTS' | translate }} {{ 'SAG.REAR' | translate }}</mat-card-title>
             <mat-card-subtitle>{{ 'SAG.VALUES' | translate }}</mat-card-subtitle>
           </mat-card-header>
+          <br>
           <mat-card-content>
             <mat-grid-list [cols]="mobileQuery.matches ? 1 : 2" [rowHeight]="mobileQuery.matches ? '1:0.2' : '1:0.3'" >
                 <mat-grid-tile
@@ -96,20 +102,21 @@
 </div>
     <!-- SAG DELANTERO -->
 <div [@animate] fxLayout="row"  fxLayoutGap="22px" class="center"  [style.margin-top]="'-22px'">
-
     <mat-card *ngIf="type==='front'" class="example-card">
       <mat-card-header>
-        <!-- <div mat-card-avatar class="example-header-image"></div> -->
         <mat-card-title>{{ 'SAG.FRONT' | translate }}</mat-card-title>
         <mat-card-subtitle>{{ 'SAG.CALC_FRONT' | translate }}</mat-card-subtitle>
         <span class="example-spacer"></span>
-        <button mat-icon-button>
-          <mat-icon (click)="openDialogSettingSagFront()" class="example-icon" aria-hidden="false" aria-label="Settings">settings</mat-icon>
+        <button mat-icon-button (click)="openDialogSettingSagFront()">
+          <mat-icon class="example-icon" aria-hidden="false" aria-label="Settings">settings</mat-icon>
         </button>
       </mat-card-header>
-      <img mat-card-image src="./assets/img/front2.png" alt="SAG">
+      <br>
+      <img height="70%" width="100%" mat-card-image src="./assets/img/front2.png" alt="{{ 'SAG.FRONT' | translate }}">
+      <br>
       <mat-card-content>
           <mat-card-title>{{ 'SAG.PUT_MEASURE' | translate }}</mat-card-title>
+          <br>
           <form [formGroup]="sagFrontForm" class="example-form">
             <table class="example-full-width responsive" cellspacing="0">
               <tr>
@@ -118,7 +125,7 @@
                           <mat-label>{{ 'SAG.MEASURE' | translate }} A</mat-label>
                           <input type="tel" matInput formControlName="raFormControl" [errorStateMatcher]="matcher"
                                   placeholder="Ejm. 600">
-                          <span matSuffix>mm</span>
+                          <span class="mat-suffix" matSuffix>mm</span>
                           <mat-hint>{{ 'SAG.MEASURE_BENCH' | translate }}</mat-hint>
                           <mat-error *ngIf="sagRearForm.get('raFormControl').hasError('pattern')" >
                             {{ 'ERROR.ERROR_1' | translate }}
@@ -133,7 +140,7 @@
                           <mat-label>{{ 'SAG.MEASURE' | translate }} B</mat-label>
                           <input type="tel" matInput formControlName="rbFormControl" [errorStateMatcher]="matcher"
                                   placeholder="Ejm. 570">
-                          <span matSuffix>mm</span>
+                          <span class="mat-suffix" matSuffix>mm</span>
                           <mat-hint>{{ 'SAG.MEASURE_GROUND' | translate }}</mat-hint>
                           <mat-error *ngIf="sagRearForm.get('rbFormControl').hasError('pattern')" >
                             {{ 'ERROR.ERROR_1' | translate }}
@@ -148,7 +155,7 @@
                           <mat-label>{{ 'SAG.MEASURE' | translate }} C</mat-label>
                           <input type="tel" matInput formControlName="rcFormControl" [errorStateMatcher]="matcher"
                                   placeholder="Ejm. 540">
-                          <span matSuffix>mm</span>
+                          <span class="mat-suffix" matSuffix>mm</span>
                           <mat-hint>{{ 'SAG.MEASURE_RIDER' | translate }}</mat-hint>
                           <mat-error *ngIf="sagRearForm.get('rcFormControl').hasError('pattern')" >
                             {{ 'ERROR.ERROR_1' | translate }}
@@ -160,19 +167,23 @@
               </table>
           </form>
       </mat-card-content>
+      <br>
       <mat-card-actions>
-        <button mat-button mat-raised-button color="primary" (click)="getSagFront();" [disabled]="errorSagEFront==null && sagFrontForm.invalid" >{{ 'SAG.CALC' | translate }}</button>
+        <button mat-button mat-raised-button color="primary" 
+        style="margin-right: 10px;"
+        (click)="getSagFront();" [disabled]="errorSagEFront==null && sagFrontForm.invalid" >{{ 'SAG.CALC' | translate }}
+      </button>
         <button mat-button (click)="sagFrontForm.reset(); dataSourceFront.sagE=''; errorSagEFront=null">{{ 'SAG.CLEAN' | translate }}</button>
       </mat-card-actions>
     </mat-card>
   <br>
     <mat-card [@flip] *ngIf="(dataSourceFront.sagE!='' || dataSourceFront.sagE=='0') && type==='front'" class="example-card">
       <mat-card-header>
-          <!-- <div mat-card-avatar class="example-header-image"></div> -->
           <mat-card-title>{{ 'SAG.RESULTS' | translate }} {{ 'SAG.FRONT' | translate }}</mat-card-title>
           <mat-card-subtitle>{{ 'SAG.VALUES' | translate }}</mat-card-subtitle>
         </mat-card-header>
         <mat-card-content>
+          <br>
           <mat-grid-list [cols]="mobileQuery.matches ? 1 : 2" [rowHeight]="mobileQuery.matches ? '1:0.2' : '1:0.3'" >
               <mat-grid-tile
               [style.background] = "dataSourceFront.errorE ? '#FFCDD2':'#DCEDC8'"
