--- a/src/material.scss
+++ b/src/material.scss
@@ -28,5 +28,5 @@ $dark-theme: mat.define-dark-theme((
   // Generates styles for all systems configured in the theme. In this case, color styles
   // and the default density styles are generated. **Note** that this is a problem because it
   // means that density styles are generated *again*, even though only the color should change.
-  @include mat.all-component-themes($dark-theme);
+  @include mat.all-component-colors($dark-theme);
 }
