--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -6,6 +6,7 @@
   <h1 class="example-app-name">{{name}}</h1>
 
   <span class="example-spacer"></span>
+  <a mat-icon-button href="https://paypal.me/quemao18" target="_blank"><mat-icon>fastfood</mat-icon></a>
   <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
     <mat-icon>translate</mat-icon>
   </button>
@@ -32,8 +33,8 @@
         <a (click)="mobileQuery.matches ? snav.close() : ''" mat-list-item routerLinkActive="active" routerLink="/sag/front" href="#">{{ 'SAG.FRONT' | translate }}</a>
         <a (click)="mobileQuery.matches ? snav.close() : ''" mat-list-item routerLinkActive="active" routerLink="/sag/rear" href="#">{{ 'SAG.REAR' | translate }}</a>
         <footer class="footer2 "> 
-          <!-- By <a [style.color]="dark? 'white':''" target="blank" href="https://github.com/quemao18">@quemao18</a> -->
-          <a [style.color]="dark? 'white':''" target="blank" href="https://paypal.me/quemao18">{{ 'HOME.PAYPAL_TEXT' | translate }}</a>
+          By <a [style.color]="dark? 'white':''" target="blank" href="https://github.com/quemao18">@quemao18</a>
+          <!-- <a [style.color]="dark? 'white':''" target="blank" href="https://paypal.me/quemao18">{{ 'HOME.PAYPAL_TEXT' | translate }}</a> -->
         </footer>
       </mat-nav-list>
     </mat-sidenav>
