--- a/src/material.scss
+++ b/src/material.scss
@@ -1,32 +1,68 @@
+
+// Custom Theming for Angular Material
+// For more information: https://material.angular.io/guide/theming
 @use '@angular/material' as mat;
+// Plus imports for other components in your app.
 
+// Include the common styles for Angular Material. We include this here so that you only
+// have to load a single css file for Angular Material in your app.
+// Be sure that you only ever include this mixin once!
+@include mat.core();
 
-$light-theme: mat.define-light-theme((
+// Define the theme object.
+$motosag-theme: mat.define-theme((
   color: (
-   primary: mat.define-palette(mat.$deep-orange-palette),
-   accent: mat.define-palette(mat.$brown-palette),
- ),
- typography: mat.define-typography-config(),
-));
-$dark-theme: mat.define-dark-theme((
-  color: (
-    primary: mat.define-palette(mat.$gray-palette),
-    accent: mat.define-palette(mat.$blue-grey-palette),
- ),
-   // Only include `typography` and `density` in the default dark theme.
-   typography: mat.define-typography-config(),
-   density: 0,
+    theme-type: light,
+    primary: mat.$azure-palette,
+    tertiary: mat.$blue-palette,
+  ),
+  density: (
+    scale: 0,
+  )
 ));
 
-// Generates styles for all systems configured in the theme. In this case, color styles
-// and default density styles are generated. Density is in themes by default.
-
-@include mat.all-component-themes($light-theme);
-
-
-.dark {
-  // Generates styles for all systems configured in the theme. In this case, color styles
-  // and the default density styles are generated. **Note** that this is a problem because it
-  // means that density styles are generated *again*, even though only the color should change.
-  @include mat.all-component-colors($dark-theme);
+// Include theme styles for core and each component used in your app.
+// Alternatively, you can import and @include the theme mixins for each component
+// that you are using.
+:root {
+  @include mat.all-component-themes($motosag-theme);
 }
+
+// Comment out the line below if you want to use the pre-defined typography utility classes.
+// For more information: https://material.angular.io/guide/typography#using-typography-styles-in-your-application.
+// @include mat.typography-hierarchy($motosag-theme);
+
+// Comment out the line below if you want to use the deprecated `color` inputs.
+// @include mat.color-variants-backwards-compatibility($motosag-theme);
+// @use '@angular/material' as mat;
+
+
+// $light-theme: mat.define-light-theme((
+//   color: (
+//    primary: mat.define-palette(mat.$deep-orange-palette),
+//    accent: mat.define-palette(mat.$brown-palette),
+//  ),
+//  typography: mat.define-typography-config(),
+// ));
+// $dark-theme: mat.define-dark-theme((
+//   color: (
+//     primary: mat.define-palette(mat.$gray-palette),
+//     accent: mat.define-palette(mat.$blue-grey-palette),
+//  ),
+//    // Only include `typography` and `density` in the default dark theme.
+//    typography: mat.define-typography-config(),
+//    density: 0,
+// ));
+
+// // Generates styles for all systems configured in the theme. In this case, color styles
+// // and default density styles are generated. Density is in themes by default.
+
+// @include mat.all-component-themes($light-theme);
+
+
+// .dark {
+//   // Generates styles for all systems configured in the theme. In this case, color styles
+//   // and the default density styles are generated. **Note** that this is a problem because it
+//   // means that density styles are generated *again*, even though only the color should change.
+//   @include mat.all-component-colors($dark-theme);
+// }
